--- a/python/astrology_engine/transits.ipynb
+++ b/python/astrology_engine/transits.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -46,6 +46,7 @@
       "Saturn Sagittarius 8°44'26\"\n",
       "Uranus Sagittarius 22°4'34\"\n",
       "Neptune Capricorn 5°44'38\"\n",
+      "Execution time: 0.0008399486541748047 seconds\n",
       "\n",
       "Actual:\n",
       "Sun Taurus 2°46'30\"\n",
@@ -65,19 +66,22 @@
    "source": [
     "from datetime import datetime\n",
     "from zoneinfo import ZoneInfo\n",
+    "import time\n",
+    "start_time = time.time()\n",
+    "zodiac_transits = ZodiacTransits()\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    # Instantiate the ZodiacTransits class and find transits\n",
-    "    zodiac_transits = ZodiacTransits()\n",
+    "BIRTH_DATETIME = datetime(1986, 4, 23, 0, 30, tzinfo=ZoneInfo(\"America/New_York\"))\n",
+    "BIRTH_LATITUDE = 40.8428759\n",
+    "BIRTH_LONGITUDE = -73.2928943\n",
     "\n",
-    "    # Get astrological birth details\n",
-    "    BIRTH_DATETIME = datetime(1986, 4, 23, 0, 30, tzinfo=ZoneInfo(\"America/New_York\"))\n",
-    "    BIRTH_LATITUDE = 40.8428759\n",
-    "    BIRTH_LONGITUDE = -73.2928943\n",
+    "birth_details = ZodiacTransits.get_astrological_birth_details(BIRTH_DATETIME, BIRTH_LATITUDE, BIRTH_LONGITUDE, \"America/New_York\")\n",
+    "for obj in birth_details['object_reports']:\n",
+    "    print(f\"{obj['object_type']} {obj['sign']} {obj['degrees']}°{obj['minutes']}'{obj['seconds']}\\\"\")\n",
     "\n",
-    "    birth_details = ZodiacTransits.get_astrological_birth_details(BIRTH_DATETIME, BIRTH_LATITUDE, BIRTH_LONGITUDE, \"America/New_York\")\n",
-    "    for obj in birth_details['object_reports']:\n",
-    "        print(f\"{obj['object_type']} {obj['sign']} {obj['degrees']}°{obj['minutes']}'{obj['seconds']}\\\"\")\n",
+    "end_time = time.time()\n",
+    "\n",
+    "print(f\"Execution time: {end_time - start_time} seconds\")\n",
+    "\n",
     "\n",
     "print(\"\"\"\n",
     "Actual:\n",
