Authorize lambdas with supabase jwt (#38)
* Require jwt for lambdas

* cleanup

--- a/python/astrology_engine/transits.ipynb
+++ b/python/astrology_engine/transits.ipynb
@@ -12,16 +12,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -30,23 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun Taurus 2°46'30\"\n",
-      "Moon Libra 14°47'49\"\n",
-      "Mercury Aries 7°12'59\"\n",
-      "Venus Taurus 25°38'38\"\n",
-      "Mars Capricorn 12°4'0\"\n",
-      "Jupiter Pisces 13°52'14\"\n",
-      "Saturn Sagittarius 8°44'26\"\n",
-      "Uranus Sagittarius 22°4'34\"\n",
-      "Neptune Capricorn 5°44'38\"\n",
-      "Execution time: 0.0008399486541748047 seconds\n",
+      "Sun Taurus 2°46'30\", Retograde: False\n",
+      "Moon Libra 14°47'49\", Retograde: False\n",
+      "Mercury Aries 7°12'59\", Retograde: False\n",
+      "Venus Taurus 25°38'38\", Retograde: False\n",
+      "Mars Capricorn 12°4'0\", Retograde: False\n",
+      "Jupiter Pisces 13°52'14\", Retograde: False\n",
+      "Saturn Sagittarius 8°44'26\", Retograde: True\n",
+      "Uranus Sagittarius 22°4'34\", Retograde: True\n",
+      "Neptune Capricorn 5°44'38\", Retograde: True\n",
+      "{'object_reports': [{'lon': 32.775128044956844, 'degree_within_sign': 2.775128044956844, 'degrees': 2, 'minutes': 46, 'seconds': 30, 'sign': 'Taurus', 'object_type': 'Sun', 'is_in_retrograde': False}, {'lon': 194.7971187081443, 'degree_within_sign': 14.797118708144296, 'degrees': 14, 'minutes': 47, 'seconds': 49, 'sign': 'Libra', 'object_type': 'Moon', 'is_in_retrograde': False}, {'lon': 7.216650534175482, 'degree_within_sign': 7.216650534175482, 'degrees': 7, 'minutes': 12, 'seconds': 59, 'sign': 'Aries', 'object_type': 'Mercury', 'is_in_retrograde': False}, {'lon': 55.64411771693707, 'degree_within_sign': 25.644117716937068, 'degrees': 25, 'minutes': 38, 'seconds': 38, 'sign': 'Taurus', 'object_type': 'Venus', 'is_in_retrograde': False}, {'lon': 282.06671161271095, 'degree_within_sign': 12.066711612710947, 'degrees': 12, 'minutes': 4, 'seconds': 0, 'sign': 'Capricorn', 'object_type': 'Mars', 'is_in_retrograde': False}, {'lon': 343.8706505280511, 'degree_within_sign': 13.870650528051101, 'degrees': 13, 'minutes': 52, 'seconds': 14, 'sign': 'Pisces', 'object_type': 'Jupiter', 'is_in_retrograde': False}, {'lon': 248.7405674564917, 'degree_within_sign': 8.740567456491704, 'degrees': 8, 'minutes': 44, 'seconds': 26, 'sign': 'Sagittarius', 'object_type': 'Saturn', 'is_in_retrograde': True}, {'lon': 262.0763432632229, 'degree_within_sign': 22.076343263222896, 'degrees': 22, 'minutes': 4, 'seconds': 34, 'sign': 'Sagittarius', 'object_type': 'Uranus', 'is_in_retrograde': True}, {'lon': 275.74391046058855, 'degree_within_sign': 5.743910460588552, 'degrees': 5, 'minutes': 44, 'seconds': 38, 'sign': 'Capricorn', 'object_type': 'Neptune', 'is_in_retrograde': True}], 'date_time_and_location': {'date': '1986-04-23', 'time': '00:30:00', 'latitude': 40.8428759, 'longitude': -73.2928943, 'timezone': 'America/New_York'}}\n",
       "\n",
       "Actual:\n",
       "Sun Taurus 2°46'30\"\n",
@@ -67,7 +58,6 @@
     "from datetime import datetime\n",
     "from zoneinfo import ZoneInfo\n",
     "import time\n",
-    "start_time = time.time()\n",
     "zodiac_transits = ZodiacTransits()\n",
     "\n",
     "BIRTH_DATETIME = datetime(1986, 4, 23, 0, 30, tzinfo=ZoneInfo(\"America/New_York\"))\n",
@@ -76,12 +66,9 @@
     "\n",
     "birth_details = ZodiacTransits.get_astrological_birth_details(BIRTH_DATETIME, BIRTH_LATITUDE, BIRTH_LONGITUDE, \"America/New_York\")\n",
     "for obj in birth_details['object_reports']:\n",
-    "    print(f\"{obj['object_type']} {obj['sign']} {obj['degrees']}°{obj['minutes']}'{obj['seconds']}\\\"\")\n",
+    "    print(f\"{obj['object_type']} {obj['sign']} {obj['degrees']}°{obj['minutes']}'{obj['seconds']}\\\", Retograde: {obj['is_in_retrograde']}\")\n",
     "\n",
-    "end_time = time.time()\n",
-    "\n",
-    "print(f\"Execution time: {end_time - start_time} seconds\")\n",
-    "\n",
+    "print(birth_details)\n",
     "\n",
     "print(\"\"\"\n",
     "Actual:\n",
